--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -78,7 +78,7 @@
                         <ul class="widget-list">
                             <li><a href="/login">Sign In</a></li>
                             <li><a href="/cart">View Cart</a></li>
-                            <li><a href="/whishlist">My Wishlist</a></li>
+                            <li><a href="/wishlist">My Wishlist</a></li>
                             <li><a href="/profile">Track My Order</a></li>
                             <li><a href="/">Help</a></li>
                         </ul><!-- End .widget-list -->
