--- a/views/users/addAddress.hbs
+++ b/views/users/addAddress.hbs
@@ -1,109 +1,117 @@
 
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-<div>
-     <!-- Plugins CSS File -->
-    <link rel="stylesheet" href="/userAssets/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/userAssets/css/style.css">
-    <div class="page-wrapper">
-    <div class="page-header text-center" style="background-image: url('/userAssets/images/page-header-bg.jpg')">
-    <div class="container">
-    <h1 class="page-title">Add Address<span>Kairos</span></h1>
-    </div><!-- End .container -->
-    </div>
+<body>
+	<div>
 
-</div>
-            <main class="main">
-        	<div class="page-header text-center" style="background-image: url('/userAssets/images/page-header-bg.jpg')">
-        	</div><!-- End .page-header -->
-            <nav aria-label="breadcrumb" class="breadcrumb-nav">
-               
-            </nav><!-- End .breadcrumb-nav -->
+	<!-- Plugins CSS File -->
+	<link rel="stylesheet" href="/userAssets/css/bootstrap.min.css">
+	<link rel="stylesheet" href="/userAssets/css/style.css">
+	<div class="page-wrapper">
+		<div class="page-header text-center" style="background-image: url('/userAssets/images/page-header-bg.jpg')">
+			<div class="container">
+				<h1 class="page-title">Add Address<span>Kairos</span></h1>
+			</div><!-- End .container -->
+		</div>
 
-            <div class="page-content">
-            	<div class="">
-	                <div class="container col-md-8 float-right">
-            			<div class="checkout-discount">
-            				
-            			</div><!-- End .checkout-discount -->
-            			<form id="addAddress">
-		                	<div class="row">
-		                		<div class="col-lg-9">
-		                			<h2 class="checkout-title">Billing Details</h2><!-- End .checkout-title -->
-		                				<div class="row">
-		                					<div class="col-sm-6">
-		                						<label>First Name *</label>
-		                						<input type="text" class="form-control" name="Fname" required>
-		                					</div><!-- End .col-sm-6 -->
+	</div>
+	<main class="main" id="main">
+		<div class="page-wrapper">
+			<div class="page-header text-center" style="background-image: url('/userAssets/images/page-header-bg.jpg')">
+		</div><!-- End .page-header -->
+		<nav aria-label="breadcrumb" class="breadcrumb-nav">
 
-		                					<div class="col-sm-6">
-		                						<label>Last Name *</label>
-		                						<input type="text" class="form-control" name="Lname" required>
-		                					</div><!-- End .col-sm-6 -->
-		                				</div><!-- End .row -->
+		</nav><!-- End .breadcrumb-nav -->
 
-	            						{{!-- <label>Company Name (Optional)</label>
-	            						<input type="text" class="form-control" name="country">  --}}
+		<div class="page-content">
+			<div class="">
+				<div class="container col-md-8 float-right">
+					<div class="checkout-discount">
 
-	            						<label>Country *</label>
-	            						<input type="text" class="form-control" name="country" required>
+					</div><!-- End .checkout-discount -->
+					<form id="addAddress">
+						<div class="row">
+							<div class="col-lg-9">
+								<h2 class="checkout-title">Billing Details</h2><!-- End .checkout-title -->
+								<div class="row">
+									<div class="col-sm-6">
+										<label>First Name *</label>
+										<input type="text" class="form-control" name="Fname" required>
+									</div><!-- End .col-sm-6 -->
 
-	            						<label>Street address *</label>
-	            						<input type="text" class="form-control" placeholder="House number and Street name" name="houseName" required>
-	            						<input type="text" class="form-control" placeholder="Appartments, suite, unit etc ..." name="appartmentName" required>
+									<div class="col-sm-6">
+										<label>Last Name *</label>
+										<input type="text" class="form-control" name="Lname" required>
+									</div><!-- End .col-sm-6 -->
+								</div><!-- End .row -->
 
-	            						<div class="row">
-		                					<div class="col-sm-6">
-		                						<label>Town / City *</label>
-		                						<input type="text" class="form-control" name="city" required>
-		                					</div><!-- End .col-sm-6 -->
+								{{!-- <label>Company Name (Optional)</label>
+								<input type="text" class="form-control" name="country"> --}}
 
-		                					<div class="col-sm-6">
-		                						<label>State / County *</label>
-		                						<input type="text" class="form-control" name="state" required>
-		                					</div><!-- End .col-sm-6 -->
-		                				</div><!-- End .row -->
+								<label>Country *</label>
+								<input type="text" class="form-control" name="country" required>
 
-		                				<div class="row">
-		                					<div class="col-sm-6">
-		                						<label>Postcode / ZIP *</label>
-		                						<input type="text" class="form-control" name="zip" required>
-		                					</div><!-- End .col-sm-6 -->
+								<label>Street address *</label>
+								<input type="text" class="form-control" placeholder="House number and Street name"
+									name="houseName" required>
+								<input type="text" class="form-control" placeholder="Appartments, suite, unit etc ..."
+									name="appartmentName" required>
 
-		                					<div class="col-sm-6">
-		                						<label>Phone *</label>
-		                						<input type="tel" class="form-control" name="phone" required>
-		                					</div><!-- End .col-sm-6 -->
-		                				</div><!-- End .row -->
+								<div class="row">
+									<div class="col-sm-6">
+										<label>Town / City *</label>
+										<input type="text" class="form-control" name="city" required>
+									</div><!-- End .col-sm-6 -->
 
-	                					<label>Email address *</label>
-	        							<input type="email" class="form-control" name="email" required>
+									<div class="col-sm-6">
+										<label>State / County *</label>
+										<input type="text" class="form-control" name="state" required>
+									</div><!-- End .col-sm-6 -->
+								</div><!-- End .row -->
 
-                                        <input type="text" class="form-control" name="userId" value="{{user._id}}" hidden>
-                                        <div class="text-center">
-                                            <button class="btn btn-success" type="submit" >Submit</button>
-                                        </div>
-	        							{{!-- <div class="custom-control custom-checkbox">
-											<input type="checkbox" class="custom-control-input" id="checkout-create-acc">
-											<label class="custom-control-label" for="checkout-create-acc">Create an account?</label>
-										</div><!-- End .custom-checkbox --> --}}
-		                	</div><!-- End .row -->
-            			</form>
-	                </div><!-- End .container -->
-                </div><!-- End .checkout -->
-            </div><!-- End .page-content -->
-			
-        </main><!-- End .main -->
-		<script>
-				$('#addAddress').submit((e)=>{
-					e.preventDefault()
-					$.ajax({
-						url:'/addAddress',
-						type:'post',
-						data:$('#addAddress').serialize(),
-						success:(response)=>{
-							window.history.back()
-						}
-					})
-				})		
-		</script>
-		
+								<div class="row">
+									<div class="col-sm-6">
+										<label>Postcode / ZIP *</label>
+										<input type="text" class="form-control" name="zip" required>
+									</div><!-- End .col-sm-6 -->
+
+									<div class="col-sm-6">
+										<label>Phone *</label>
+										<input type="tel" class="form-control" name="phone" required>
+									</div><!-- End .col-sm-6 -->
+								</div><!-- End .row -->
+
+								<label>Email address *</label>
+								<input type="email" class="form-control" name="email" required>
+
+								<input type="text" class="form-control" name="userId" value="{{user._id}}" hidden>
+								<div class="text-center">
+									<button class="btn btn-success" type="submit">Submit</button>
+								</div>
+								{{!-- <div class="custom-control custom-checkbox">
+									<input type="checkbox" class="custom-control-input" id="checkout-create-acc">
+									<label class="custom-control-label" for="checkout-create-acc">Create an
+										account?</label>
+								</div><!-- End .custom-checkbox --> --}}
+							</div><!-- End .row -->
+					</form>
+					</div>
+				</div><!-- End .container -->
+			</div><!-- End .checkout -->
+		</div><!-- End .page-content -->
+		</div>
+	</main><!-- End .main -->
+	
+</body>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+	<script>
+		$('#addAddress').submit((e) => {
+			e.preventDefault()
+			$.ajax({
+				url: '/addAddress',
+				type: 'post',
+				data: $('#addAddress').serialize(),
+				success: (response) => {
+					window.history.back()
+				}
+			})
+		})		
+	</script>
