--- a/views/users/login.hbs
+++ b/views/users/login.hbs
@@ -3,22 +3,20 @@
 <!-- molla/login.html  22 Nov 2019 10:04:03 GMT -->
 
 <head>
-
     <link rel="stylesheet" href="/userAssets/css/bootstrap.min.css">
     <!-- Main CSS File -->
     <link rel="stylesheet" href="/userAssets/css/style.css">
 </head>
 
 <body>
-
     <main class="main">
         <nav aria-label="breadcrumb" class="breadcrumb-nav border-0 mb-0">
         </nav><!-- End .breadcrumb-nav -->
         <div class="login-page bg-image pt-8 pb-8 pt-md-12 pb-md-12 pt-lg-17 pb-lg-17  "
-            style="background-image: url('https://images4.newscred.com/Zz1kNmFkYmFmNzhlNGIxMWViYTU1ZDFmYjg0ZWI5MTc4Zg==');height:130% ;">
+            style="background-image: url('https://images4.newscred.com/Zz1kNmFkYmFmNzhlNGIxMWViYTU1ZDFmYjg0ZWI5MTc4Zg==');height:110% ;">
             <h1 class="text-center" style="color: #141000;">KAIROS</h1>
             <h3 class="text-center" style="color: #493c00;">The precious moment</h3>
-            <div class="container">
+            <div class="container-fluid">
                 <div class="form-box" style="border-radius: 50px;  opacity:1">
                     <div class="form-tab ">
                         <ul class="nav nav-pills nav-fill" role="tablist">
@@ -37,18 +35,18 @@
                                     <div class="form-group">
                                         {{!-- <label for="register-email-2">Your name *</label> --}}
                                         <h6>Your Name *</h6>
-                                        <input type="text" class="form-control" id="name" name="Rname" required
-                                            onkeyup="nameCheck()" onclick="nameCheck()"
+                                        <input type="text" class="form-control" id="Rname" name="Rname" required
+                                            onkeyup="nameCheck()" onclick="nameCheck()" onkeydown="nameCheck()"
                                             placeholder="please enter your user name">
                                         <p id="error-name" style="color: red;"> </p>
                                     </div><!-- End .form-group -->
                                     <div class="form-group">
                                         {{!-- <label for="register-email-2">Your email *</label> --}}
                                         <h6>Your email *</h6>
-                                        <input type="email" name="Remail" class="form-control" id="email"
-                                            onkeyup="emailCheck()" onclick="emailCheck()"
+                                        <input type="email" name="Remail" class="form-control" id="Remail"
+                                            onkeyup="emailCheck()" onclick="emailCheck()" onkeydown="emailCheck()"
                                             placeholder="please enter your unique email address">
-                                        <p id="ermail" style="color: red"></p>
+                                        <p id="errmail" style="color: red"></p>
                                     </div><!-- End .form-group -->
                                     <div class="form-group">
                                         {{!-- <label for="phonenumber">Your Mobile Number *</label> --}}
@@ -65,6 +63,7 @@
                                         <input type="password" class="form-control" id="register-password-2"
                                             name="Rpassword" required onkeyup="phoneCheck()" onclick="passwordCheck()"
                                             placeholder="enter your password">
+                                            <p class="text-danger" id="pwordErr"></p>
                                     </div><!-- End .form-group -->
 
                                     <div class="form-group">
@@ -104,7 +103,8 @@
                                         <h6>email address *</h6>
                                         <i class="fa fa-bold" aria-hidden="true"></i>
                                         <input type="email" class="form-control" id="singin-email-2" name="Lemail"
-                                            placeholder="enter your registered email address" required>
+                                            placeholder="enter your registered email address" required onclick="SEmailCheck()" onkeydown="SEmailCheck()" onkeypress="SEmailCheck()">
+                                            <p class="text-danger" id="SEmailErr"></p>
                                     </div><!-- End .form-group -->
 
                                     <div class="form-group">
@@ -125,8 +125,9 @@
                                             <label class="custom-control-label" for="signin-remember-2">Remember
                                                 Me</label>
                                         </div><!-- End .custom-checkbox --> --}}
-                                        <a href="/phoneLogin" class="forgot-link"></a>  
-                                            <div class="d-flex ml-auto"><a href="/phoneNumber" class="" style="text-decoration: none; ">Forget Your Password ?</a> </div> 
+                                        <a href="/phoneLogin" class="forgot-link"></a>
+                                        <div class="d-flex ml-auto"><a href="/phoneNumber" class=""
+                                                style="text-decoration: none; ">Forget Your Password ?</a> </div>
                                     </div><!-- End .form-footer -->
                                     {{#if err}}
                                     <p class="text-center" style="color: red;">{{err}}</p>
@@ -231,7 +232,8 @@
                                         <p id="passTrue"></p>
                                         <p id="message" class="text-danger text-center"></p>
                                         <div class="form-footer">
-                                            <button type="submit" class="btn btn-outline-primary-2" onclick="phoneModal()">
+                                            <button type="submit" class="btn btn-outline-primary-2"
+                                                onclick="phoneModal()">
                                                 <span>SUBMIT</span>
                                                 <i class="icon-long-arrow-right"></i>
                                             </button>
@@ -301,56 +303,128 @@
     <script src="/userAssets/js/owl.carousel.min.js"></script>
     <!-- Main JS File -->
     <script src="/userAssets/js/main.js"></script>
-<script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 
-<script>
-    function phoneModal(){
-    phone = document.getElementById('mobNum').value;
-    
-    $.ajax({
-        url:'/mobileNumber',
-        method:'post',
-        data:{mobile:phone},
-        success:(response)=>{
-            if(response)
-            {
-                $('#otpModal').modal('show')
+    <script>
+        function phoneModal() {
+            phone = document.getElementById('mobNum').value;
+
+            $.ajax({
+                url: '/mobileNumber',
+                method: 'post',
+                data: { mobile: phone },
+                success: (response) => {
+                    if (response) {
+                        $('#otpModal').modal('show')
+                    }
+                }
+            })
+        }
+        function remove() {
+            document.getElementById('message').innerHTML = "";
+        }
+    </script>
+
+
+    <script>
+        $('#signUpForm').submit((e) => {
+            e.preventDefault()
+            document.getElementById('signupMsg').innerHTML = " "
+            $.ajax({
+                url: '/signup',
+                type: 'post',
+                data: $('#signUpForm').serialize(),
+                success: (response) => {
+                    if (response.user) {
+                        swal("Succesfully Registerd !", "Please Login!", "success").then(() => {
+                            location.reload()
+                        })
+
+                    }
+                    else if (response.userExist) {
+                        document.getElementById('signupMsg').innerHTML = "User Exist"
+                    }
+                    else if (response.invalidReferal) {
+                        document.getElementById('signupMsg').innerHTML = "Invalid Refferal Please Login with a valid Refferal"
+                    }
+                    else {
+                        alert("hai every bidy")
+                    }
+                }
+            })
+        })
+
+
+        function containsSpecialChars(str) {
+            const specialChars = /[`!@#$%^&*()_+\-=\[\]{};':"\\|,.<>\/?~]/;
+            return specialChars.test(str);
+        }
+
+        function containNumbers(str) {
+            const numbers = /[1234567890]/;
+            return numbers.test(str);
+        }
+
+        function nameCheck() {
+            document.getElementById("error-name").innerHTML = " ";
+            var name = document.getElementById("Rname").value;
+            name = name.trim();
+            if (name == "" || name == null) {
+                document.getElementById("error-name").innerHTML = "This area should not be blank";
+            }
+            else if (containsSpecialChars(name)) {
+                document.getElementById("error-name").innerHTML = "Characters are not allowed";
+            }
+            else if (containNumbers(name)) {
+                document.getElementById("error-name").innerHTML = "numbers are not allowed";
             }
         }
-    })
-    }
-
-    function remove() {
-        document.getElementById('message').innerHTML = "";
-    }
-</script>
-
-<script>
-    $('#signUpForm').submit((e) => {
-        e.preventDefault()
-        document.getElementById('signupMsg').innerHTML = " "
-        $.ajax({
-            url: '/signup',
-            type: 'post',
-            data: $('#signUpForm').serialize(),
-            success: (response) => {
-                if (response.user) {
-                    swal("Succesfully Registerd !", "Please Login!", "success").then(() => {
-                        location.reload()
-                    })
-
-                }
-                else if (response.userExist) {
-                    document.getElementById('signupMsg').innerHTML = "User Exist"
-                }
-                else if (response.invalidReferal) {
-                    document.getElementById('signupMsg').innerHTML = "Invalid Refferal Please Login with a valid Refferal"
-                }
-                else {
-                    alert("hai every bidy")
-                }
+        function ValidateEmailSignature(mail) {
+            const characters = /@/;
+            if (characters.test(mail)) {
+                return true;
+            } else {
             }
-        })
-    })		
-</script>
+        }
 
+        function emailCheck() {
+            document.getElementById('errmail').innerHTML = ""
+            var mail = document.getElementById('Remail').value;
+            mail = mail.trim();
+            if (mail == "" || mail == null) {
+                document.getElementById('errmail').innerHTML = "Email cannot be blank"
+            }
+            else if (ValidateEmailSignature(mail)) {
+                document.getElementById('errmail').innerHTML = "Enter the remaining part after '@'"
+            }
+            else {
+                document.getElementById("errmail").innerHTML = "Email should contain '@'";
+            }
+        }
+
+        function validatePhoneNumber(phone) {
+        var re = /^\(?(\d{3})\)?[- ]?(\d{3})[- ]?(\d{4})$/;  
+        return re.test(phone);
+        }
+
+        function phoneCheck(){
+           document.getElementById('errphone').innerHTML = ""
+           phone =  document.getElementById('phonenumber').value;
+           phone = phone.trim();
+           if(phone == "" || phone == null)
+           {
+            document.getElementById('errphone').innerHTML = "This field cannot be blank"
+           }
+           else{
+            if(containNumbers(phone))
+            {
+             document.getElementById('errphone').innerHTML = ""
+            }
+            else{
+            document.getElementById('errphone').innerHTML = "Enter a valid phone number" 
+            }
+           }
+        } 
+
+
+    </script>
