--- a/views/users/wishlist.hbs
+++ b/views/users/wishlist.hbs
@@ -25,7 +25,7 @@
             <nav aria-label="breadcrumb" class="breadcrumb-nav">
                 <div class="container">
                     <ol class="breadcrumb">
-                        <li class="breadcrumb-item"><a href="index.html">Home</a></li>
+                        <li class="breadcrumb-item"><a href="/">Home</a></li>
                         <li class="breadcrumb-item"><a href="#">Shop</a></li>
                         <li class="breadcrumb-item active" aria-current="page">Wishlist</li>
                     </ol>
@@ -53,7 +53,7 @@
 									<div class="product">
 										<figure class="product-media">
 											<a href="#">
-												<img src="/userAssets/images/products/table/product-2.jpg" alt="Product image">
+												<img src="/pictures/productImages/{{this.product.image.[0]}}" alt="Product image">
 											</a>
 										</figure>
 
@@ -388,6 +388,9 @@
      <script src="/javascripts/script.js"></script>
 </body>
 <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+    <script>
+
+</script>
 <script>
     function removeProduct(wishlistId,prodId)
     {
